[gd_scene load_steps=2 format=3 uid="uid://bbi55l6mkwv8n"]

[ext_resource type="Script" path="res://prog_88a.gd" id="1_qqcad"]

[node name="prog_88a" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qqcad")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_right = 348.0
offset_bottom = 117.0
text = "Enter num1:"

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 4.0
offset_top = 151.0
offset_right = 352.0
offset_bottom = 268.0
text = "Enter num2:"

[node name="lblOut" type="Label" parent="."]
layout_mode = 0
offset_left = 4.0
offset_top = 291.0
offset_right = 749.0
offset_bottom = 650.0

[node name="txtNum1" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 349.0
offset_top = 4.0
offset_right = 750.0
offset_bottom = 122.0

[node name="txtNum2" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 350.0
offset_top = 152.0
offset_right = 751.0
offset_bottom = 270.0

[node name="btnCalc" type="Button" parent="."]
layout_mode = 0
offset_left = 866.0
offset_top = 4.0
offset_right = 1150.0
offset_bottom = 118.0
text = "Calculate"

[node name="btnOut" type="Button" parent="."]
layout_mode = 0
offset_left = 870.0
offset_top = 264.0
offset_right = 1154.0
offset_bottom = 378.0
text = "Clear"

[node name="btnClear" type="Button" parent="."]
layout_mode = 0
offset_left = 872.0
offset_top = 533.0
offset_right = 1156.0
offset_bottom = 647.0
text = "Exit"

[connection signal="pressed" from="btnCalc" to="." method="_on_btn_calc_pressed"]
[connection signal="pressed" from="btnClear" to="." method="_on_btn_clear_pressed"]
